test/service/networking/curlpod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: curl-deployment
spec:
    selector:
        matchLabels:
            app: curlpod
    replicas: 1
    template:
        metadata:
            labels:
                app: curlpod
        spec:
            volumes:
                - name: secret-volume
                  secret:
                      secretName: nginxsecret
            containers:
                - name: curlpod
                  command:
                      - sh
                      - -c
                      - while true; do sleep 1; done
                  image: radial/busyboxplus:curl
                  volumeMounts:
                      - mountPath: /etc/nginx/ssl
                        name: secret-volume
