test/service/networking/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: test-ingress
spec:
    backend:
        serviceName: mewo-svc
        servicePort: 80
