test/service/networking/nginxsecrets.yaml
apiVersion: "v1"
kind: "Secret"
metadata:
    name: "nginxsecret"
    namespace: "default"
data:
    nginx.crt: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMrVENDQWVHZ0F3SUJBZ0lKQUtkaTI1UEo4Y1BQTUEwR0NTcUdTSWIzRFFFQkN3VUFNQk14RVRBUEJnTlYKQkFvTUNHMTVMVzVuYVc1NE1CNFhEVEU1TURFd05EQXpNell6TkZvWERUSXdNREV3TkRBek16WXpORm93RXpFUgpNQThHQTFVRUNnd0liWGt0Ym1kcGJuZ3dnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCCkFRQ3NDL1hXUFNIamFlL3RVdnFVeHpEV1dndmdzbXovQmRuQitMNmV5RDlzTTR6bVMrRjgwblhrS3YxRGV0cDYKUnpBVGpCWGQ2clVhMzgxOVFhM1hnbVdISndEbGNFQXpicVBFTm9ieUtwdk1IbE84L09lSjRveW9adEo4Z1pUQgpJQjJ0RlpQemtM [...]
    nginx.key: "LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQ3NDL1hXUFNIamFlL3QKVXZxVXh6RFdXZ3Znc216L0JkbkIrTDZleUQ5c000em1TK0Y4MG5Ya0t2MURldHA2UnpBVGpCWGQ2clVhMzgxOQpRYTNYZ21XSEp3RGxjRUF6YnFQRU5vYnlLcHZNSGxPOC9PZUo0b3lvWnRKOGdaVEJJQjJ0RlpQemtMSmpTWFc2Ck1DYmg0TllYV3R3ZVdlcCs3VElnTHhrZVErZ2RZYUFxOTFyRVVEMWllTEhVWjV6SzRBNzBVVGd5V0trbUhmMTAKR202TzJyTHkzb21VempsTlJESnI3QUREeENRSE41TmhSWlVoVk1UcURvaWdqeUtJUkhrdVBSOVhlNFJNdVhEdApjNTlaTjM1T0RG [...]
